--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "remove-props",
+  "name": "remove-prop",
   "version": "1.0.0",
   "description": "\"Set of utilities to remove props from a object\"",
   "main": "src/index.js",
   "author": "Abhishek Prajapati",
-  "license": "MIT",
-  "private": "false"
+  "license": "MIT"
 }
